--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,8 @@
 # Ignore Vim swap files
 .*.sw[a-z]
 
-#Ignore Dragonfly uploads
+# Ignore Dragonfly uploads
 /public/system/dragonfly
+
+# Ignore public assets
+/public/assets
